--- a/Resources/views/Analytics/async.html.twig
+++ b/Resources/views/Analytics/async.html.twig
@@ -1,71 +1,78 @@
 <script type="text/javascript">
-    if ( _gaq == null || typeof(_gaq) != 'array') { var _gaq = window._gaq = []; }
+	if ( _gaq == null || typeof(_gaq) != 'array') { var _gaq = window._gaq = []; }
 
-    {% for key, tracker in google_analytics.trackers %}
+	{% for key, tracker in google_analytics.trackers %}
+	_gaq.push(function() {
+		var {{ tracker.name }} = _gaq._createAsyncTracker('{{ tracker.accountId }}','{{ tracker.name }}');
+	});
+	{% if tracker.domain %}
+	_gaq.push(['{{ tracker.name }}._setDomainName', '{{ tracker.domain }}']);
 
-    _gaq.push(function() {
-        var {{ tracker.name }} = _gaq._createAsyncTracker('{{ tracker.accountId }}','{{ tracker.name }}');
-    });
+	{% if google_analytics.getAllowLinker(key) %}
+	_gaq.push(['{{ tracker.name }}._setAllowLinker', true ]);
+	{% else %}
+	_gaq.push(['{{ tracker.name }}._setAllowLinker', false ]);
+	{% endif %}
 
-    {% if tracker.domain %}
-        _gaq.push(['{{ tracker.name }}._setDomainName', '{{ tracker.domain }}']);
-        _gaq.push(['{{ tracker.name }}._setAllowLinker', {{ google_analytics.getAllowLinker(key) }} ]);
-        _gaq.push(['{{ tracker.name }}._setAllowHash', {{ google_analytics.getAllowHash(key) }} ]);
-    {% endif %}
+	{% if google_analytics.getAllowHash(key) %}
+	_gaq.push(['{{ tracker.name }}._setAllowHash', true ]);
+	{% else %}
+	_gaq.push(['{{ tracker.name }}._setAllowHash', false ]);
+	{% endif %}
+	{% endif %}
 
-    {% if google_analytics.hasCustomVariables() %}
-        {% for customVariable in google_analytics.getCustomVariables() %}
-            _gaq.push(['{{ tracker.name }}._setCustomVar', {{ customVariable.index }}, '{{ customVariable.name }}', '{{ customVariable.value }}', {{ customVariable.scope }}]);
-        {% endfor %}
-    {% endif %}
+	{% if google_analytics.hasCustomVariables() %}
+	{% for customVariable in google_analytics.getCustomVariables() %}
+		_gaq.push(['{{ tracker.name }}._setCustomVar', {{ customVariable.index }}, '{{ customVariable.name }}', '{{ customVariable.value }}', {{ customVariable.scope }}]);
+	{% endfor %}
+	{% endif %}
 
-    {% if google_analytics.hasPageViewQueue() %}
-        {% for pageView in google_analytics.getPageViewQueue() %}
-            _gaq.push(['{{ tracker.name }}._trackPageview', '{{ pageView }}']);
-        {% endfor %}
-    {% endif %}
+	{% if google_analytics.hasPageViewQueue() %}
+	{% for pageView in google_analytics.getPageViewQueue() %}
+		_gaq.push(['{{ tracker.name }}._trackPageview', '{{ pageView }}']);
+	{% endfor %}
+	{% endif %}
 
-    {% if google_analytics.hasCustomPageView %}
-        _gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getCustomPageView() }}']);
-    {% else %}
-        _gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getRequestUri() }}']);
-    {% endif %}
+	{% if google_analytics.hasCustomPageView %}
+	_gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getCustomPageView() }}']);
+	{% else %}
+	_gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getRequestUri() }}']);
+	{% endif %}
 
-    {% if google_analytics.isTransactionValid() %}
-        {% set transaction = google_analytics.transaction %}
-        _gaq.push(['{{ tracker.name }}._addTrans',
-            '{{ transaction.orderNumber | escape('js') }}', // order number required
-            '{{ transaction.affiliation | escape('js') }}', // affiliation optional
-            '{{ transaction.total | escape('js') }}', // total optional
-            '{{ transaction.tax | escape('js') }}', // tax optional
-            '{{ transaction.shipping | escape('js') }}', // shipping optional
-            '{{ transaction.city | escape('js') }}', // city optional
-            '{{ transaction.state | escape('js') }}', // state optional
-            '{{ transaction.country | escape('js') }}' // country optional
-        ]);
+	{% if google_analytics.isTransactionValid() %}
+	{% set transaction = google_analytics.transaction %}
+	_gaq.push(['{{ tracker.name }}._addTrans',
+		'{{ transaction.orderNumber | escape('js') }}', // order number required
+		'{{ transaction.affiliation | escape('js') }}', // affiliation optional
+		'{{ transaction.total | escape('js') }}', // total optional
+		'{{ transaction.tax | escape('js') }}', // tax optional
+		'{{ transaction.shipping | escape('js') }}', // shipping optional
+		'{{ transaction.city | escape('js') }}', // city optional
+		'{{ transaction.state | escape('js') }}', // state optional
+		'{{ transaction.country | escape('js') }}' // country optional
+	]);
 
-        {% if google_analytics.hasItems() %}
-            {% for item in google_analytics.items %}
-                _gaq.push(['{{ tracker.name }}._addItem',
-                    '{{ item.orderNumber | escape('js') }}', // order number required
-                    '{{ item.sku | escape('js') }}', // sku required
-                    '{{ item.name | escape('js') }}', // name optional
-                    '{{ item.category | escape('js') }}', // category optional
-                    '{{ item.price | escape('js') }}', // price required
-                    '{{ item.quantity | escape('js') }}' // quantity required
-                ]);
-            {% endfor %}
-        {% endif %}
+	{% if google_analytics.hasItems() %}
+	{% for item in google_analytics.items %}
+	_gaq.push(['{{ tracker.name }}._addItem',
+		'{{ item.orderNumber | escape('js') }}', // order number required
+		'{{ item.sku | escape('js') }}', // sku required
+		'{{ item.name | escape('js') }}', // name optional
+		'{{ item.category | escape('js') }}', // category optional
+		'{{ item.price | escape('js') }}', // price required
+		'{{ item.quantity | escape('js') }}' // quantity required
+	]);
+	{% endfor %}
+	{% endif %}
 
-        _gaq.push(['{{ tracker.name }}._trackTrans']);
+	_gaq.push(['{{ tracker.name }}._trackTrans']);
 
-    {% endif %}
+	{% endif %}
+	{% endfor %}
 
-{% endfor %}
-
-(function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
+	(function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
 </script>
