Support for URL fragments in default integration

--- a/Resources/views/Analytics/async.html.twig
+++ b/Resources/views/Analytics/async.html.twig
@@ -33,10 +33,14 @@
 	{% endfor %}
 	{% endif %}
 
-	{% if google_analytics.hasCustomPageView %}
-	_gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getCustomPageView() }}']);
-	{% else %}
-	_gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getRequestUri() }}']);
+    {% if google_analytics.hasCustomPageView %}
+    _gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getCustomPageView() }}']);
+    {% else %}
+    if (window.location.hash) {
+        _gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getRequestUri() }}'#'+window.location.hash]);
+    } else {
+        _gaq.push(['{{ tracker.name }}._trackPageview', '{{ google_analytics.getRequestUri() }}']);
+    }
 	{% endif %}
 
 	{% if google_analytics.isTransactionValid %}
