--- a/Resources/views/Analytics/dashboard.html.twig
+++ b/Resources/views/Analytics/dashboard.html.twig
@@ -1,13 +1,13 @@
 <script src="https://www.google.com/jsapi"></script>
-<script src="{{ asset('/bundles/google/js/gdash-1.0.js') }}"></script>
+<script src="{{ asset('bundles/google/js/gdash-1.0.js') }}"></script>
 <script src="https://apis.google.com/js/client.js?onload=gadashInit"></script>
 
 <script>
 
     var config = {
-            'apiKey': '{{ google_analytics.apiKey }}',
-            'clientId':'{{ google_analytics.clientId }}',
-            'tableId': '{{ google_analytics.tableId }}'
+            'apiKey'   : '{{ google_analytics.apiKey|e('js') }}',
+            'clientId' : '{{ google_analytics.clientId|e('js') }}',
+            'tableId'  : '{{ google_analytics.tableId|e('js') }}'
     };
     
     {% if authorizeButton is defined %}
