[ANALTYICS] Event args label / value should be optional

--- a/Resources/views/Analytics/async.html.twig
+++ b/Resources/views/Analytics/async.html.twig
@@ -111,7 +111,13 @@ if ( _gaq == null || typeof(_gaq) != 'array') { var _gaq = window._gaq = []; }
     {% if google_analytics.hasEventQueue %}
         AntiMattr.GoogleAnalytics.onGatLoad(function() {
         {% for event in google_analytics.eventQueue %}
-            AntiMattr.GoogleAnalytics.notifyEvent('{{ google_analytics.trackerName(key) }}', '{{ event.category }}','{{ event.action }}','{{ event.label }}','{{ event.value }}');
+            AntiMattr.GoogleAnalytics.notifyEvent(
+                  '{{ google_analytics.trackerName(key) }}'
+                , '{{ event.category }}'
+                , '{{ event.action }}'
+                {% if event.label is not null %}, '{{ event.label }}'{% endif %}
+                {% if event.value is not null %}, '{{ event.value }}'{% endif %}
+            );
         {% endfor %}
         });
     {% endif %}
