--- a/Resources/views/Adwords/track.html.twig
+++ b/Resources/views/Adwords/track.html.twig
@@ -1,22 +1,34 @@
 {% if google_adwords.hasActiveConversion() %}
+
+    {% if google_adwords.activeConversion.getRemarketing() %}
+<!-- Google Code for Remarketing-Tag -->
+        {% set noscriptPrefix = "//googleads.g.doubleclick.net/pagead/viewthroughconversion" %}
+    {% else %}
 <!-- GOOGLE CODE FOR CONVERSION START -->
-<script type="text/javascript">
-/* <![CDATA[ */
-var google_conversion_id = {{ google_adwords.activeConversion.getId() }};
-var google_conversion_language = "en";
-var google_conversion_format = "2";
-var google_conversion_color = "ffffff";
-var google_conversion_label = "{{ google_adwords.activeConversion.getLabel() }}";
-var google_conversion_value = {{ google_adwords.activeConversion.getValue() }};
-/* ]]> */
-</script>
-<script type="text/javascript" src="https://www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" 
-	src="https://www.googleadservices.com/pagead/conversion/{{ google_adwords.activeConversion.getId() }}/?label={{ google_adwords.activeConversion.getLabel() }}&amp;guid=ON&amp;script=0"/>
-</div>
-</noscript>
-<!-- GOOGLE CODE FOR CONVERSION END -->
+        {% set noscriptPrefix = "//www.googleadservices.com/pagead/conversion" %}
+    {% endif %}
+
+    <script type="text/javascript">
+    /* <![CDATA[ */
+        var google_conversion_id = {{ google_adwords.activeConversion.getId() }};
+        var google_conversion_language = "en";
+        var google_conversion_format = "2";
+        var google_conversion_color = "ffffff";
+        var google_conversion_label = "{{ google_adwords.activeConversion.getLabel() }}";
+        var google_conversion_value = {{ google_adwords.activeConversion.getValue() }};
+        {% if google_adwords.activeConversion.getRemarketing() %}
+            var google_custom_params = window.google_tag_params;
+            var google_remarketing_only = true;
+        {% endif %}}
+    /* ]]> */
+    </script>
+    <script type="text/javascript" src="https://www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+        <div style="display:inline;">
+        <img height="1" width="1" style="border-style:none;" alt=""
+            src="{{ noscriptPrefix }}/{{ google_adwords.activeConversion.getId() }}/?label={{ google_adwords.activeConversion.getLabel() }}&amp;guid=ON&amp;script=0&amp;value={{ google_adwords.activeConversion.getValue() }}"/>
+        </div>
+    </noscript>
+<!-- google tracking code END -->
 {% endif %}
