Fixed syntax error in tracking code.

--- a/Resources/views/Adwords/track.html.twig
+++ b/Resources/views/Adwords/track.html.twig
@@ -19,7 +19,7 @@
         {% if google_adwords.activeConversion.getRemarketing() %}
             var google_custom_params = window.google_tag_params;
             var google_remarketing_only = true;
-        {% endif %}}
+        {% endif %}
     /* ]]> */
     </script>
     <script type="text/javascript" src="https://www.googleadservices.com/pagead/conversion.js">
