--- a/Resources/views/Analytics/async_ua.html.twig
+++ b/Resources/views/Analytics/async_ua.html.twig
@@ -5,7 +5,14 @@
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
     {% for key, tracker in google_analytics.trackers %}
-        ga('create', '{{ tracker.accountId }}', '{{ tracker.domain }}', {'name': '{{ google_analytics.trackerName(key)|trim('.') }}'});
+        {% if tracker.crossDomain is defined %}
+
+            ga('require', 'linker');
+            ga('linker:autoLink', [{% for domain in tracker.crossDomain %}'{{ domain }}'{% endfor %}]);
+
+        {% endif %}
+
+        ga('create', '{{ tracker.accountId }}', {% if tracker.crossDomain is defined %}'auto', {'name': '{{ google_analytics.trackerName(key)|trim('.') }}', 'allowLinker': true}{% else %}'{{ tracker.domain }}',{'name': '{{ google_analytics.trackerName(key)|trim('.') }}'}{% endif %});
         ga('{{ google_analytics.trackerName(key) }}require', 'displayfeatures');
         ga('{{ google_analytics.trackerName(key) }}send', 'pageview');
         ga('{{ google_analytics.trackerName(key) }}set', 'anonymizeIp', {% if tracker.anonymizeIp %}true{% else %}false{% endif %});
