--- a/Resources/views/Analytics/async_universal.html.twig
+++ b/Resources/views/Analytics/async_universal.html.twig
@@ -73,16 +73,16 @@ ga('{{ google_analytics.trackerName(key) }}set', '{{ customVariable.name }}', '{
 // @see https://developers.google.com/analytics/devguides/collection/analyticsjs/pages
 {% if google_analytics.hasPageViewQueue %}
 {% for pageView in google_analytics.pageViewQueue %}
-ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ pageView|json_encode|raw }}');
+ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ pageView|raw }}');
 {% endfor %}
 {% endif %}
 {% if google_analytics.hasCustomPageView %}
-ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getCustomPageView()|json_encode|raw }}');
+ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getCustomPageView()|raw }}');
 {% else %}
 if (window.location.hash) {
-    ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getRequestUri()|json_encode|raw }}'+window.location.hash);
+    ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getRequestUri()|raw }}'+window.location.hash);
 } else {
-    ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getRequestUri()|json_encode|raw }}');
+    ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getRequestUri()|raw }}');
 }
 {% endif %}
 
