--- a/Resources/views/Analytics/async_universal.html.twig
+++ b/Resources/views/Analytics/async_universal.html.twig
@@ -109,8 +109,8 @@ ga('create', '{{ tracker.accountId | raw }}', 'auto', config);
 
 // Plugins
 // @see https://developers.google.com/analytics/devguides/collection/analyticsjs/plugins
-{% for plugin in google_analytics.plugins %}
-ga('require', '{{ plugin }}');
+{% for plugin in google_analytics.plugins(key) %}
+ga('{{ google_analytics.trackerName(key) }}require', '{{ plugin }}');
 {% endfor %}
 
 // Custom Variables on pageview
@@ -144,7 +144,7 @@ if (window.location.hash) {
 // Note: Classic Transaction do have a native send method, so they do not need to be initialized prior to page views
 {% if google_analytics.isTransactionValid %}
 {% set transaction = google_analytics.transaction %}
-ga('require', 'ecommerce');
+ga('{{ google_analytics.trackerName(key) }}require', 'ecommerce');
 ga('{{ google_analytics.trackerName(key) }}ecommerce:addTransaction', {
   'id': '{{ transaction.orderNumber | escape('js') }}',          // Transaction ID. Required
   'affiliation': '{{ transaction.affiliation | escape('js') }}', // Affiliation or store name OPTIONAL
