--- a/Resources/views/Analytics/async_universal.html.twig
+++ b/Resources/views/Analytics/async_universal.html.twig
@@ -122,6 +122,11 @@ ga('{{ google_analytics.trackerName(key) }}set', '{{ customVariable.name }}', '{
 {% endfor %}
 {% endif %}
 
+// Classic Transactions
+// @see https://developers.google.com/analytics/devguides/collection/upgrade/reference/gajs-analyticsjs#ecommerce
+// Note: Classic Transaction do have a native send method, so they do not need to be initialized prior to page views
+{% include "GoogleBundle:Analytics:transaction.js.twig" with {'key': 'key'} %}
+
 // Pageview
 // @see https://developers.google.com/analytics/devguides/collection/analyticsjs/pages
 {% if google_analytics.hasPageViewQueue %}
@@ -137,34 +142,6 @@ if (window.location.hash) {
 } else {
     ga('{{ google_analytics.trackerName(key) }}send', 'pageview', '{{ google_analytics.getRequestUri()|raw }}');
 }
-{% endif %}
-
-// Classic Transactions
-// @see https://developers.google.com/analytics/devguides/collection/upgrade/reference/gajs-analyticsjs#ecommerce
-// Note: Classic Transaction do have a native send method, so they do not need to be initialized prior to page views
-{% if google_analytics.isTransactionValid %}
-{% set transaction = google_analytics.transaction %}
-ga('{{ google_analytics.trackerName(key) }}require', 'ecommerce');
-ga('{{ google_analytics.trackerName(key) }}ecommerce:addTransaction', {
-  'id': '{{ transaction.orderNumber | escape('js') }}',          // Transaction ID. Required
-  'affiliation': '{{ transaction.affiliation | escape('js') }}', // Affiliation or store name OPTIONAL
-  'revenue': '{{ transaction.total | escape('js') }}',           // Grand Total
-  'shipping': '{{ transaction.shipping | escape('js') }}',       // Shipping OPTIONAL
-  'tax': '{{ transaction.tax | escape('js') }}'                  // Tax OPTIONAL
-});
-{% if google_analytics.hasItems %}
-{% for item in google_analytics.items %}
-ga('{{ google_analytics.trackerName(key) }}ecommerce:addItem', {
-  'id': '{{ item.orderNumber | escape('js') }}',    // Transaction ID. Required
-  'name': '{{ item.name | escape('js') }}',         // Product name. Required
-  'sku': '{{ item.sku | escape('js') }}',           // SKU/code
-  'category': '{{ item.category | escape('js') }}', // Category or variation
-  'price': '{{ item.price | escape('js') }}',       // Unit price
-  'quantity': '{{ item.quantity | escape('js') }}'  // Quantity
-});
-{% endfor %}
-{% endif %}
-ga('{{ google_analytics.trackerName(key) }}ecommerce:send');
 {% endif %}
 
 // Events
