--- a/Resources/views/Analytics/transaction.js.twig
+++ b/Resources/views/Analytics/transaction.js.twig
@@ -8,17 +8,17 @@
   {% set transaction = google_analytics.transaction %}
   ga('{{ google_analytics.trackerName(key) }}require', 'ec');
   
-  {% if google_analytics.hasProducts %}
-  {% for product in google_analytics.products %}
+  {% if google_analytics.hasItems %}
+  {% for product in google_analytics.getItems %}
   ga('{{ google_analytics.trackerName(key) }}ec:addProduct', { // Provide product details in an productFieldObject.
-    'id': '{{ product.sku | escape('js') }}',            // Product ID (string).
+    'id': '{{ product.id | escape('js') }}',            // Product ID (string).
     'name': '{{ product.title | escape('js') }}',        // Product name (string).
     'category': '{{ product.category | escape('js') }}', // Product category (string).
     'brand': '{{ product.brand | escape('js') }}',       // Product brand (string).
     'variant': '{{ product.variant | escape('js') }}',   // Product variant (string).
     'price': '{{ product.price | escape('js') }}',       // Product price (currency).
     'coupon': '{{ product.coupon | escape('js') }}',     // Product coupon (string).
-    'quantity': {{ item.quantity | escape('js') }}       // Product quantity (number).
+    'quantity': {{ product.quantity | escape('js') }}    // Product quantity (number).
   });
   {% endfor %}
   {% endif %}
@@ -51,7 +51,7 @@
   ga('{{ google_analytics.trackerName(key) }}ecommerce:addItem', {
     'id': '{{ item.orderNumber | escape('js') }}',    // Transaction ID. Required
     'name': '{{ item.name | escape('js') }}',         // Product name. Required
-    'sku': '{{ item.sku | escape('js') }}',           // SKU/code
+    'sku': '{{ item.id | escape('js') }}',           // SKU/code
     'category': '{{ item.category | escape('js') }}', // Category or variation
     'price': '{{ item.price | escape('js') }}',       // Unit price
     'quantity': '{{ item.quantity | escape('js') }}'  // Quantity
